src/test/deca/context/invalid/object/badInitFieldNotSub.deca
class X
{
  int a;
}
class A
{
  X a(int a){}
}

class B extends A
{
  B c = new A();
}
